@@ -15,7 +15,7 @@ RUN apt-get update && apt-get install -y python-software-properties software-pro
 RUN apt-get install -y iputils-ping
 
 # Adds the repository where JDK 8 can be obtained for UBUNTU
-RUN add-apt-repository ppa:webupd8team/java
+RUN add-apt-repository ppa:openjdk-r/ppa
 
 # INSTALL THE VI EDITOR AND MYSQL-CLIENT
 RUN apt-get install -y vim
@@ -27,7 +27,7 @@ RUN apt-get install -y mysql-client
 # RUN echo "oracle-java8-installer shared/accepted-oracle-license-v1-1 boolean true" | debconf-set-selections
 #INSTALL ALL the updates again and install MAVEN and JDK 8
 # RUN apt-get update && apt-get install -y oracle-java8-installer maven
-RUN apt-get update && apt-get install -y default-jdk maven
+RUN apt-get update && apt-get install -y openjdk-17-jdk maven
 
 
 # ADD a directory called docker-git-hello-world inside the UBUNTU IMAGE where you will be moving all of these files under this 
@@ -36,7 +36,7 @@ ADD . /usr/local/docker-git-hello-world
 
 # AFTER YOU HAVE MOVED ALL THE FILES GO AHEAD CD into the directory and run mvn assembly.
 # Maven assembly will package the project into a JAR FILE which can be executed
-RUN cd /usr/local/docker-git-hello-world && mvn assembly:assembly
+RUN cd /usr/local/docker-git-hello-world && mvn --add-modules assembly:assembly
 
 #THE CMD COMMAND tells docker the command to run when the container is started up from the image. In this case we are
 # executing the java program as is to print Hello World.
